# advent-of-code-2020

./: README.md  aoci.sh
python/: aoc.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day10_alt.py  day11.py  day14.py  day15.py  day16.py  day17.py  day17_part1.py  day17_part2.py
rust/: .gitignore  Cargo.toml
rust/data/: input
rust/src/: lib.rs
