[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["JothCoder <41806047+JothCoder@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rustc-hash = { version = "1.1.0", optional = true}

[lib]
name = "aoc"

[features]
hashmap = ["rustc-hash"]

[[bin]]
name = "day15_hashmap"
required-features = ["hashmap"]

[profile.release]
lto = true